Adiciona a estrutura do body

--- a/index.html
+++ b/index.html
@@ -6,5 +6,15 @@
     <link rel="stylesheet" href="./style.css" />
     <title>Coca-Cola</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <!-- Conteúdo do cabeçalho -->
+    </header>
+    <main>
+      <!-- Conteúdo principal -->
+    </main>
+    <footer>
+      <!-- Rodapé -->
+    </footer>
+  </body>
 </html>
