Adiciona HTML e CSS do header

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <header>
-      <!-- Conteúdo do cabeçalho -->
+      <img src="./img/menu-burger.svg" alt="Menu hamburger" />
+      <span>MENU</span>
     </header>
     <main>
       <!-- Conteúdo principal -->
