--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       <span>MENU</span>
     </header>
     <main>
-      <!-- Conteúdo principal -->
+      <img src="./img/background-image.png" alt="logo da coca-cola" class="background-logo" />
+      <h2 class="content-text">Things go better with</h2>
+      <img src="./img/coca-cola.png" alt="garrafa coca-cola" class="content-image" />
     </main>
     <footer>
       <!-- Rodapé -->
