--- a/fanta.html
+++ b/fanta.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./fanta.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./fanta.css" />
     <title>Fanta</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <img src="./img/menu-burger.svg" alt="Menu hamburger" />
-        <span>MENU</span>
-        <a href="index.html">Coca-Cola</a>
-      </header>
-      <main>
-        <!-- <img src="./img/background-image.png" alt="logo da coca-cola" class="background-logo" /> -->
-        <h2 class="content-text">Things go better with</h2>
-        <img src="./img/fanta.png" alt="garrafa fanta" class="content-image" />
-      </main>
-      <footer>
-        <div></div>
-        <span>Tiago Guimarães</span>
-        <img src="./img/map.svg" alt="mapa" />
-      </footer>
-</body>
+      <img src="./img/menu-burger.svg" alt="Menu hamburger" />
+      <span>MENU</span>
+      <a href="index.html">Coca-Cola</a>
+    </header>
+    <main>
+      <h2 class="content-text">Things go better with</h2>
+      <img src="./img/fanta-2.png" alt="garrafa fanta" class="content-image" />
+    </main>
+    <footer>
+      <div></div>
+      <span>Tiago Guimarães</span>
+      <img src="./img/map.svg" alt="mapa" />
+    </footer>
+  </body>
 </html>
