ajuste grid media query

--- a/fanta.html
+++ b/fanta.html
@@ -14,11 +14,10 @@
     </header>
     <main>
       <h2 class="content-text">Things go better with</h2>
-      <img src="./img/fanta-2.png" alt="garrafa fanta" class="content-image" />
+      <img src="./img/fanta.png" alt="garrafa fanta" class="content-image" />
     </main>
     <footer>
-      <div></div>
-      <span>Tiago Guimarães</span>
+        <span>Tiago Guimarães</span>
       <img src="./img/map.svg" alt="mapa" />
     </footer>
   </body>
